update gromacs from 2021.4 to 2022.2
fix cg minimizer

--- a/examples/gromacs/npt_gromacs.yml
+++ b/examples/gromacs/npt_gromacs.yml
@@ -15,7 +15,7 @@ steps:
             constraints: h-bonds
             nstxout: 100
             nstenergy: 10
-            pcoupl: Berendsen
+            pcoupl: C-rescale
             tau-p: 1
             ref-p: 1
             compressibility: 4.5e-5
