--- a/examples/gromacs/setup_vac_min.yml
+++ b/examples/gromacs/setup_vac_min.yml
@@ -1,8 +1,25 @@
+inputs:
+  crd_path:
+    type: File
+    format:
+    - edam:format_1476
+    - edam:format_2033
+  top_zip_path:
+    type: File
+    format:
+    - edam:format_3987
+
 steps:
   - topology.yml:
-  - min.yml: # Minimize in vacuum first, then in solvent.
+      in:
+        crd_path: ~crd_path
+        top_zip_path: ~top_zip_path
+  - min_vac.yml: # Minimize in vacuum first, then in solvent.
+      in:
+        top_zip_path: ~top_zip_path
   - solv_ion.yml:
-
+      in:
+        top_zip_path: ~top_zip_path
 wic:
   graphviz:
     label: System Setup
