--- a/examples/gromacs/steep_vac.yml
+++ b/examples/gromacs/steep_vac.yml
@@ -1,17 +1,25 @@
+# On my machine, 10 iterations of steepest descent is sufficient to prevent
+# conjugate gradient from crashing. (i.e. pytest works for me!)
+# But using only 10 iterations is causing the tests on github actions to fail!
+# 25 seems to work, but let's just set it to 100.
+inputs:
+  top_zip_path:
+    type: File
+    format:
+    - edam:format_3987
 steps:
   - grompp:
       in:
+        input_top_zip_path: ~top_zip_path
         config:
           mdp:
-            integrator: cg
-            #define: -DFLEXIBLE # Defines a flexible water model if it exists in the system
-            # https://manual.gromacs.org/current/reference-manual/algorithms/energy-minimization.html#conjugate-gradient
+            integrator: steep
             rvdw: 1.4
             rcoulomb: 1.4
             #coulombtype: PME
             nsteps: 1000
-            emstep: 0.01
-            emtol: 10
+            emstep: 0.0001
+            emtol: 100
             nstxout: 100
             nstenergy: 1
   - mdrun:
@@ -24,11 +32,11 @@ steps:
       in:
         config:
           terms: [Potential]
-        output_xvg_path: 'energy_min_cg.xvg'
+        output_xvg_path: 'energy_min_steep.xvg'
 
 wic:
   graphviz:
-    label: Conjugate\nGradient
+    label: Steepest\nDescent
   steps:
     (1, grompp):
       wic:
