--- a/examples/gromacs/topology.yml
+++ b/examples/gromacs/topology.yml
@@ -1,24 +1,31 @@
+inputs:
+  crd_path:
+    type: File
+    format:
+    - edam:format_1476
+    - edam:format_2033
+  top_zip_path:
+    type: File
+    format:
+    - edam:format_3987
 steps:
 # We want to perform vacuum minimization first, before solvation and ionization.
 # NOTE: Gromacs no longer supports non-periodic boundary conditions (!!!),
 # so we must emulate a vacuum by using a very large (1000 Angstrom) box.
-  - editconf:
-      in:
-        input_crd_path: '*complex_vac.pdb'
-        output_crd_path: '&complex_box.g96'
-        config:
-          box_type: cubic
-          distance_to_molecule: 100.0
+
+- editconf:
+    in:
+      input_crd_path: ~crd_path
+      output_crd_path: '&complex_box.g96'
+      config:
+        box_type: cubic
+        distance_to_molecule: 100
 
 wic:
   graphviz:
     label: Topology
   steps:
-    (1, pdb2gmx):
-      wic:
-        graphviz:
-          label: 'Generate\nInitial\nTopology'
-    (2, editconf):
+    (1, editconf):
       wic:
         graphviz:
           label: 'Initialize\nVacuum Box'
